[project]
name = "peft-examples"
version = "0.1.0"
description = "A collection of examples on PEFT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "bitsandbytes>=0.48.1",
    "datasets>=4.2.0",
    "flash-attn>=2.8.3",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.57.0",
    "trl>=0.23.1",
    "wandb>=0.22.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
]
